# bubbleproc

./: .gitignore  Cargo.toml  Dockerfile  README.md  bubblepy.py  deploy_python.sh  examples.py  run_tests.sh  test_python_api.py  test_security.sh
bindings/elixir/: mix.exs
bindings/elixir/lib/: bubbleproc.ex
bindings/elixir/lib/bubbleproc/: error.ex  native.ex  sandbox.ex
bindings/elixir/native/bubbleproc_nif/: Cargo.toml
bindings/elixir/native/bubbleproc_nif/src/: lib.rs
bindings/elixir/test/: bubbleproc_test.exs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/bubbleproc/: __init__.py  _sandbox.py
bindings/python/src/: lib.rs
bindings/typescript/: package.json  tsconfig.json
bindings/typescript/__test__/: sandbox.test.ts
bindings/typescript/src/: index.ts  sandbox.ts
crates/bubbleproc-cli/: Cargo.toml
crates/bubbleproc-cli/src/: main.rs
crates/bubbleproc-core/src/: constants.rs  lib.rs
crates/bubbleproc-linux/: Cargo.toml
crates/bubbleproc-linux/src/: lib.rs
