[workspace]
members = [
    "crates/bubbleproc-core",
    "crates/bubbleproc-linux",
    "crates/bubbleproc-cli",
    "bindings/python",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
bubbleproc-core = { path = "crates/bubbleproc-core" }
bubbleproc-linux = { path = "crates/bubbleproc-linux" }