[package]
name = "bubbleproc_python"
version = "0.1.0"
edition = "2021"

[lib]
name = "_bubbleproc_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
bubbleproc-core = { path = "../../crates/bubbleproc-core" }
bubbleproc-linux = { path = "../../crates/bubbleproc-linux" }
